ft: <adapter_query_form>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -346,9 +346,9 @@ Style/PercentLiteralDelimiters:
     '%W': ()
     '%x': ()
 
-Naming/PredicateName:
-  ForbiddenPrefixes:
-    - get_
+# Naming/PredicateName:
+#   ForbiddenPrefixes:
+#     - get_
 
 Style/RaiseArgs:
   EnforcedStyle: exploded
